log.txt
make[1]: Entering directory '/c/Users/jeremy/GitHub/C++/lovepotion/platform/3ds'
messagebox_single_none.png
Used lz11 for compression
messagebox_single_pressed.png
Used lz11 for compression
messagebox_two_none.png
Used lz11 for compression
messagebox_two_pressed_left.png
Used lz11 for compression
messagebox_two_pressed_right.png
Used lz11 for compression
nogame.lua
wrap_event.lua
wrap_imagedata.lua
wrap_math.lua
wrap_randomgenerator.lua
window_button.lua
window_messagebox.lua
wrap_window.lua
In file included from c:\users\jeremy\github\c++\lovepotion\include\common\luax.h:28,
                 from c:\users\jeremy\github\c++\lovepotion\source\main.cpp:1:
c:\users\jeremy\github\c++\lovepotion\include\common\version.h:5:48: error: '__APP_VERSION__' was not declared in this scope
    5 |     static constexpr const char* LOVE_POTION = __APP_VERSION__;
      |                                                ^~~~~~~~~~~~~~~
make[2]: *** [/opt/devkitpro/devkitARM/base_rules:80: main.o] Error 1
make[1]: *** [Makefile:189: all] Error 2
make[1]: Leaving directory '/c/Users/jeremy/GitHub/C++/lovepotion/platform/3ds'
make: *** [Makefile:42: ctr] Error 2
